# NiCE-coday-2025

./: .gitignore  Makefile  README.md  pyproject.toml
src/task_one/: SOLUTION_ANALYSIS.md  __init__.py  app.py  benchmark.py  temp_benchmark_test.txt
src/task_one/Resources/: Test0.txt
src/task_three/: __init__.py  app.py
src/task_three/Resources/: Test0.txt  Test10.txt  Test11.txt  Test12.txt  Test13.txt  Test14.txt  Test15.txt  Test16.txt  Test17.txt  Test18.txt  Test19.txt  Test5.txt  Test6.txt  Test7.txt  Test8.txt  Test9.txt
src/task_two/: __init__.py  app.py
src/task_two/Resources/: Test0.txt
task_documents/: TaskOne.txt  TaskThree.txt  TaskTwo.txt
tests/task_one/: test_task_one.py
tests/task_three/: test_task_three.py
tests/task_two/: test_task_two.py
